# mopro-wallet-connect-noir

./: .gitignore  Cargo.toml  Config.toml  README.md
circuits/: Prover.toml
circuits/src/: main.nr
contracts/: Verifier.sol
flutter/: pubspec.yaml
flutter/android/app/: build.gradle
flutter/android/app/src/main/: AndroidManifest.xml
flutter/android/gradle/wrapper/: gradle-wrapper.properties
flutter/integration_test/: plugin_integration_test.dart
flutter/ios/Runner/: Info.plist
flutter/lib/: config.dart  main.dart  wallet_connect_service.dart
flutter/mopro_flutter_plugin/android/src/main/kotlin/com/example/mopro_flutter/: MoproFlutterPlugin.kt
flutter/mopro_flutter_plugin/android/src/main/kotlin/uniffi/mopro/: mopro.kt
flutter/mopro_flutter_plugin/ios/: .gitignore
flutter/mopro_flutter_plugin/ios/Classes/: MoproFlutterPlugin.swift  mopro.swift
flutter/mopro_flutter_plugin/lib/: mopro_flutter.dart  mopro_flutter_method_channel.dart  mopro_flutter_platform_interface.dart  mopro_types.dart
mopro_flutter_bindings/: pubspec.yaml
mopro_flutter_bindings/example/: pubspec.yaml
mopro_flutter_bindings/example/ios/Runner.xcodeproj/: project.pbxproj
mopro_flutter_bindings/example/linux/runner/: my_application.cc
mopro_flutter_bindings/example/macos/Runner.xcodeproj/: project.pbxproj
mopro_flutter_bindings/lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
mopro_flutter_bindings/rust/: Cargo.toml
mopro_flutter_bindings/rust/src/: frb_generated.rs
src/: error.rs  lib.rs
test-vectors/noir/: noir_multiplier2.json
