
[package]
name = "mopro-wallet-connect-noir"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

# Adapters for different proof systems
[features]
default = ["mopro-ffi/noir"]

[dependencies]
mopro-wasm = { git = "https://github.com/zkmopro/mopro.git" }
mopro-ffi = { git = "https://github.com/zkmopro/mopro.git", features = ["uniffi"] }
noir = { git = "https://github.com/zkmopro/noir-rs", branch = "v1.0.0-beta.8-3", features = ["barretenberg", "android-compat"] }
rust-witness = "0.1"
num-bigint = "0.4.0"
thiserror = "2.0.12"
serial_test = "3.2.0"
serde_json = "1.0.94"

[build-dependencies]
rust-witness = "0.1"
