
[package]
name = "mopro-wallet-connect-noir"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

# Adapters for different proof systems
[features]
default = ["uniffi"]
uniffi = ["mopro-ffi/uniffi"]
flutter = ["mopro-ffi/flutter"]

[dependencies]
mopro-wasm = { git = "https://github.com/zkmopro/mopro.git" }
mopro-ffi = "0.3.2"
thiserror = "2.0.12"
anyhow = "1.0.99"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.94"

noir_rs = { package = "noir", git = "https://github.com/zkmopro/noir-rs", features = [
    "barretenberg",
    "android-compat",
], branch = "v1.0.0-beta.8-3" }

[dev-dependencies]
mopro-ffi = { version = "0.3.2", features = ["uniffi-tests"] }

serial_test = "3.0.0"